# ff-server

./: README.md  docker-compose.prod.yml  pyproject.toml
ff_server/: main.py
ff_server/config/: config.py  logger.py
ff_server/lib/: funcutils.py  redis_connection_manager.py
ff_server/middlewares/: log_middleware.py
ff_server/modules/: router.py
ff_server/modules/communication/: controllers.py
ff_server/modules/communication/manager/: __init__.py  connection_manager.py  websocket_pull_manager.py
ff_server/modules/communication/services/: __init__.py  create_room_service.py  join_to_server_service.py  send_message_on_connect_service.py  store_message_service.py
ff_server/modules/communication/services/daos/: __init__.py  message_dao.py  rooms_dao.py
ff_server/modules/core/: controller.py
ff_server/modules/core/services/: health_check_service.py
ff_server/modules/core/services/daos/: service_dao.py
nginx/: Dockerfile  nginx.conf
